[EPAD8-200] Fix dropdown z-index

--- a/services/drupal/web/themes/epa_theme/source/_patterns/05-components/menu/menu--main/_menu--main.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/05-components/menu/menu--main/_menu--main.scss
@@ -106,6 +106,7 @@
       grid-template-columns: 1fr 1fr;
       position: absolute;
       width: auto;
+      z-index: 1;
 
       // stylelint-disable-next-line selector-no-qualifying-type
       html.js &[hidden] {
